--- a/config.json
+++ b/config.json
@@ -3,8 +3,8 @@
 	"deletelinksmode": "False",
 	"deletebotsmode": "False",
 	"antiadvertising": "True",
-	"joinmsgs": "True",
-	"leavemsgs": "True",
+	"joinmsgs": "False",
+	"leavemsgs": "False",
 	"logging": "True",
 	"logging_channel_general": "294994191489171467",
 	"logging_channel_joins_leaves": "294994789361909761",
